# gazprom_test

./: .dockerignore  .env  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: beee9ea68425_.py  e82bef96450b_.py  fbdf5eeb1aa7_initial.py
presentation/api/v1/routes/: device_data.py  user.py
repositories/: device.py  device_data.py  factories.py  user.py
repositories/models/: __init__.py  device.py  device_data.py  user.py
schemas/: device.py  device_data.py  user.py
tasks/: tasks.py
utils/: settings.py  utils.py
